--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -214,7 +214,7 @@ jobs:
 
       - name: Download samples(daily)
         if: startsWith(matrix.cases, './template/') && ${{ github.event_name == 'schedule' }}
-        uses: actions/checkout@dev
+        uses: actions/checkout@v3
         with:
           repository: OfficeDev/TeamsFx-Samples
           ref: dev
