--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -213,7 +213,7 @@ jobs:
           lscpu
 
       - name: Download samples(daily)
-        if: startsWith(matrix.cases, './template/') && ${{ github.event_name == 'schedule' }}
+        if: ${{ github.event_name == 'schedule' && startsWith(matrix.cases, './template/') }}
         uses: actions/checkout@v3
         with:
           repository: OfficeDev/TeamsFx-Samples
@@ -221,7 +221,7 @@ jobs:
           path: packages/cli/tests/e2e/resource
 
       - name: Download samples(rc)
-        if: startsWith(matrix.cases, './template/') && ${{ github.event_name == 'workflow_dispatch' }}
+        if: ${{ github.event_name == 'workflow_dispatch' && startsWith(matrix.cases, './template/') }}
         uses: actions/checkout@v3
         with:
           repository: OfficeDev/TeamsFx-Samples
