--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -52,6 +52,7 @@
     "onCommand:fx-extension.signinM365",
     "onCommand:fx-extension.validate-getStarted-prerequisites",
     "onCommand:workbench.action.tasks.runTask",
+    "onCommand:workbench.action.debug.start",
     "workspaceContains:**/.fx/*",
     "workspaceContains:teamsapp.yml",
     "onView:teamsfx-empty-project"
