chore: update activation event

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -54,7 +54,8 @@
     "onCommand:workbench.action.tasks.runTask",
     "workspaceContains:**/.fx/*",
     "workspaceContains:teamsapp.yml",
-    "onView:teamsfx-empty-project"
+    "onView:teamsfx-empty-project",
+    "onUri"
   ],
   "capabilities": {
     "untrustedWorkspaces": {
