chore: rename m365Title/acquire to teamsApp/extendToM365
- update the action comment
- rename M365TitleNotAcquiredError to NotExtendedToM365Error

--- a/templates/scenarios/ts/m365-tab/.vscode/launch.json
+++ b/templates/scenarios/ts/m365-tab/.vscode/launch.json
@@ -51,7 +51,7 @@
             "request": "launch",
             "url": "https://www.office.com/m365apps/${{M365_APP_ID}}?auth=2&${account-hint}",
             "presentation": {
-                "group": "group 3: Office",
+                "group": "group 3: the Microsoft 365 app",
                 "order": 3
             },
             "internalConsoleOptions": "neverOpen"
